--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <ul class="header-social">
                 <li><a href="https://facebook.com/Lå Tï Fæ" target="_blank"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
                 <li><a href="https://wa.me/09078827012" target="_blank"><i class="fab fa-whatsapp" aria-hidden="true"></i></a></li>
-                <li><a href="https://linkedlin/favour jibriinu" target="_blank"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
+                <li><a href="www.linkedin.com/in/favour-jibriinu-7a48b9259" target="_blank"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
                 <li><a href="https://github.com/LaTIFa-lab" target="_blank"><i class="fab fa-github" aria-hidden="true"></i></a></li>
             </ul>
         </nav>
