--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </ul>
 
             <ul class="header-social">
-                <li><a href="https://www.facebook.com/me/lå-tï-fæ" target="_blank"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.facebook.com/lå-tï-fæ" target="_blank"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
                 <li><a href="https://wa.me/09078827012" target="_blank"><i class="fab fa-whatsapp" aria-hidden="true"></i></a></li>
                 <li><a href="www.linkedin.com/in/favour-jibriinu-7a48b9259" target="_blank"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
                 <li><a href="https://github.com/LaTIFa-lab" target="_blank"><i class="fab fa-github" aria-hidden="true"></i></a></li>
@@ -374,34 +374,6 @@
 
     </section> <!-- end s-services -->
 
-
-    <!-- CTA
-    ================================================== -->
-    <!-- <section class="s-cta ss-dark">
-
-        <div class="row heading-block heading-block--center" data-aos="fade-up">
-            <div class="column large-full">
-                <h2 class="section-desc">
-                    Need a great Reliable Service
-                </h2>
-            </div>
-        </div> end heading-block --> 
-
-       <!--  <div class="row cta-content" data-aos="fade-up">
-            <div class="column large-full">
-                <p>
-                    I highly recommend <a href="https://github.com/Codex" target="_blank">Codex</a>.
-                    Powerful Coding and Web Design Expertes.
-
-                </p>
-
-                <a href="https://github.com/Codex" class="btn full-width" target="_blank">Get Started</a>
-            </div>
-        </div> end ad-content -->
-
-    </section> <!-- end s-cta -->
-
-
     <!-- works
     ================================================== -->
     <section id="works" class="s-works target-section">
@@ -624,9 +596,9 @@
             <div class="column large-7 medium-full contact-social">
                 <h4>Social</h4>
                 <ul>
-                    <li><a href="#0" title="Facebook">Facebook</a></li>
-                    <li><a href="#0" title="Twitter">Twitter</a></li>
-                    <li><a href="#0" title="Instagram">Linkedin</a></li>
+                    <li><a href="https://www.facebook.com/lå-tï-fæ" title="Facebook">Facebook</a></li>
+                    <li><a href="https://wa.me/09078827012" title="Twitter">Whatsapp</a></li>
+                    <li><a href="www.linkedin.com/in/favour-jibriinu-7a48b9259" title="Instagram">Linkedin</a></li>
                 </ul>
             </div>
 
